--- a/index.html
+++ b/index.html
@@ -5,11 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Mobile Development</title>
     <link rel="stylesheet" href="./css/css.css">
+    <link rel="shortcut icon" href="./img/Icono.png" type="image/x-icon">
 </head>
 <body>
     <section class="section section-1">
         <h3>Mobile Development</h3>
-        <h2>Grow your business with mobile apps</h2>
+        <h1>Grow your business with mobile apps</h1>
     </section>
     
     <section class="section section-2">
